# gateway

./: .gitignore  README.md  install.sh  license.txt  main.py  requirements.txt  run.sh
components/: graphic_btn.py
components/ble/: ble.py
sensor/: sht30.py
server/ble/: ble.py  ble_api.py  ble_server.py
server/mqtt/: pub_client.py  sub_client.py
services/ble/: ble_server.py
services/ble/protobuf/: hubscreen.proto
services/ble/src/: main.py
services/hubscreen/: main.py
services/hubscreen/protobuf/: hubscreen.proto  hubscreen_pb2.py
services/hubscreen/src/: event_catcher.py  gui.py  hubscreen.py  hubscreen_pb2.py  main.py  utils.py
services/hubscreen/src/components/: graphql.py  gui.py  hubscreen_pb2.py  network.py  run.py  voice_assistant.py
services/hubscreen/src/protobuf/: hubscreen.proto
services/master/: CMakeLists.txt
services/master/protobuf/: hubscreen.pb.cc  hubscreen.pb.h  hubscreen.proto
services/master/src/: main.cc  main.py
services/mqtt/: sub_client.py
services/mqtt/protobuf/: hubscreen.proto  hubscreen_pb2.py
services/mqtt/src/: main.py
services/protobuf/: hubscreen.proto  hubscreen_pb2.py
services/voice_assistant/protobuf/: hubscreen.proto  hubscreen_pb2.py
services/voice_assistant/src/: demo.py  main.py
thuhuong_env/: pyvenv.cfg
